--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,16 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- JQuery -->
+    <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"
+          th:href="@{/webjars/bootstrap/5.0.0-beta2/css/bootstrap.min.css}">
 
     <title>Recipe Home</title>
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+        th:src="@{/webjars/bootstrap/5.0.0-beta2/js/bootstrap.bundle.min.js}" crossorigin="anonymous"
+></script>
 
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
@@ -22,7 +27,7 @@
             <div class="card border-primary mb-3">
 
                 <div class="card-header bg-primary text-white">
-                    <h5 class="card-title" style="margin: 0px" ><b>My Recipes!</b></h5>
+                    <h5 class="card-title" style="margin: 0px"><b>My Recipes!</b></h5>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
