--- a/src/main/resources/templates/recipe/ingredient/show.html
+++ b/src/main/resources/templates/recipe/ingredient/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Ingredient List</title>
+    <title>Show Ingredient</title>
 
     <meta charset="UTF-8">
     <!-- Required meta tags -->
@@ -25,41 +25,31 @@
             <div class="card border-primary mb-3">
 
                 <div class="card-header bg-primary text-white">
-                    <h5 class="card-title"><b>Ingredients</b></h5>
+                    <h5 class="card-title"><b>Ingredient</b></h5>
                 </div>
                 <div class="card-body">
 
-                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
+                    <div class="table-responsive">
                         <table class="table table-hover ">
                             <thead class="thead-inverse">
                             <tr>
                                 <th>ID</th>
+                                <th>Amount</th>
+                                <th>Unit of Measure</th>
                                 <th>Description</th>
-                                <th>View</th>
-                                <th>Update</th>
-                                <th>Delete</th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
-                                <td>123</td>
-                                <td>Tasty Goodnees 1</td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Update</a></td>
-                                <td><a href="#">Delete</a></td>
-                            </tr>
-                            <tr th:remove="all">
                                 <td>12333</td>
+                                <td>Cup</td>
+                                <td>4</td>
                                 <td>Tasty Goodnees 2</td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Update</a></td>
-                                <td><a href="#">Delete</a></td>
                             </tr>
-                            <tr th:each="ingredient : ${recipe.ingredients}">
+                            <tr>
                                 <td th:text="${ingredient.id}">334</td>
-                                <td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} + ' - ' + ${ingredient.description} + '/show'">Tasty Goodnees 3</td>
-                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/show'}">View</a></td>
-                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/update'}">Update</a></td>
-                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete'}">Delete</a></td>
+                                <td th:text="${ingredient.amount}">1</td>
+                                <td th:text="${ingredient.uom.getDescription()}">Teaspoon</td>
+                                <td th:text="${ingredient.description}">Tasty Goodnees</td>
                             </tr>
                         </table>
                     </div>
