--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,11 +25,19 @@
 
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-8 offset-md-2">
             <div class="card border-primary mb-3">
 
                 <div class="card-header bg-primary text-white">
-                    <h5 class="card-title" style="margin: 0px"><b>My Recipes!</b></h5>
+                    <div class="row">
+                        <div class="col-md-11">
+                            <h5 class="card-title" style="margin: 0px"><b>My Recipes!</b></h5>
+                        </div>
+                        <div class="col-md-1">
+                            <a class="btn btn-light btn-outline-dark btn-sm" href="#"
+                               th:href="@{'/recipe/new'}" role="button">New</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
