--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -22,7 +22,7 @@
 <div class="container-fluid" style="margin-top: 20px; margin-bottom: 10px">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <form  th:object="${recipe}" th:action="@{/recipe/}" method="post">
+            <form th:object="${recipe}" th:action="@{/recipe/}" method="post">
                 <input type="hidden" th:field="*{id}"/>
                 <div class="cards">
                     <div class="card border-primary mb-3">
@@ -43,15 +43,15 @@
                             </div>
                             <div class="row g-3">
                                 <div class="form-group col-md-9 offset-2">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value=""/>
-                                    <label class="form-check-label">Cat 1</label>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value=""/>
+                                        <label class="form-check-label">Cat 1</label>
+                                    </div>
+                                    <div class="form-check" th:remove="all">
+                                        <input class="form-check-input" type="checkbox" value=""/>
+                                        <label class="form-check-label">Cat 2</label>
+                                    </div>
                                 </div>
-                                <div class="form-check" th:remove="all">
-                                    <input class="form-check-input" type="checkbox" value=""/>
-                                    <label class="form-check-label">Cat 2</label>
-                                </div>
-                            </div>
                             </div>
                             <div class="row g-3">
                                 <div class="form-group col-md-4">
@@ -64,10 +64,15 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label><b>Difficulty:</b></label>
-                                    <select class="form-control">
-                                        <option>Easy</option>
-                                        <option>Medium</option>
-                                        <option>Hard</option>
+                                    <select class="form-control" th:field="*{difficulty}">
+                                        <option th:remove="all">Easy</option>
+                                        <option th:remove="all">Medium</option>
+                                        <option th:remove="all">Hard</option>
+                                        <option th:each="difficultyValue:${T(recipeapp.domain.Difficulty).values()}"
+                                                th:value="${difficultyValue.name()}"
+                                                th:text="${difficultyValue.name()}"
+                                        >Val
+                                        </option>
                                     </select>
                                 </div>
                             </div>
