--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -81,7 +81,7 @@
                                 <h6><b>URL:</b></h6>
                             </div>
                             <div class="col-md-3">
-                                <p th:text="${recipe.url}">www.example.com</p>
+                                <p><a href="#" th:href="${recipe.url}" >View Original</a></p>
                             </div>
                         </div>
                     </div>
