--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -24,15 +24,24 @@
             <div class="cards">
                 <div class="card border-primary mb-3">
                     <div class="card-header bg-primary text-white">
-                        <h5 class="card-title" style="margin: 0px"><b th:text="${recipe.description}">Recipe Description
-                            Here!</b></h5>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h5 class="card-title" style="margin: 0px"><b th:text="${recipe.description}">Recipe
+                                    Description
+                                    Here!</b></h5>
+                            </div>
+                            <div class="col-md-2 offset-4">
+                                <a class="btn btn-light btn-outline-dark btn-sm" href="#"
+                                   th:href="@{'/recipe/' + ${recipe.id} + '/image'}" role="button">Change Image</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="card-body">
-                        <div class="row">
+                        <div class="row" style="margin-bottom:20px">
                             <div class="col-md-3">
                                 <h6><b>Categories:</b></h6>
                             </div>
-                            <div class="col-md-9">
+                            <div class="col-md-3">
                                 <ul>
                                     <li th:remove="all">cat one</li>
                                     <li th:remove="all">cat two</li>
@@ -40,6 +49,11 @@
                                         three
                                     </li>
                                 </ul>
+                            </div>
+                            <div class="col-md-3 offset-2">
+                                <img src="../../static/images/guacamole.png"
+                                     th:src="@{/images/guacamole.png}"
+                                     width="150px" height="150px" border="1px">
                             </div>
                         </div>
                         <div class="row">
@@ -81,7 +95,7 @@
                                 <h6><b>URL:</b></h6>
                             </div>
                             <div class="col-md-3">
-                                <p><a href="#" th:href="${recipe.url}" >View Original</a></p>
+                                <p><a href="#" th:href="${recipe.url}">View Original</a></p>
                             </div>
                         </div>
                     </div>
