--- a/src/main/resources/templates/404error.html
+++ b/src/main/resources/templates/404error.html
@@ -22,6 +22,7 @@
     <div class="row">
         <div class="col-md-6">
             <h1>404 Not Found</h1>
+            <p th:text="${exception.getMessage()}">Placeholder</p>
         </div>
     </div>
 </div>
