--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -23,6 +23,9 @@
     <div class="row">
         <div class="col-md-8 offset-md-2">
             <form th:object="${recipe}" th:action="@{/recipe/}" method="post">
+                <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger" role="alert">
+                    Please correct errors below
+                </div>
                 <input type="hidden" th:field="*{id}"/>
                 <div class="cards">
                     <div class="card border-primary mb-3">
@@ -31,9 +34,15 @@
                         </div>
                         <div class="card-body">
                             <div class="row g-3">
-                                <div class="col-md-4 form-group">
+                                <div class="col-md-4 form-group" th:class="${#fields.hasErrors('description')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                     <label><b>Recipe Description:</b></label>
-                                    <input type="text" class="form-control" th:field="*{description}"/>
+                                    <input type="text" class="form-control" th:field="*{description}" th:errorclass="is-invalid"/>
+                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('description')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row g-3">
@@ -54,13 +63,25 @@
                                 </div>
                             </div>
                             <div class="row g-3">
-                                <div class="form-group col-md-4">
+                                <div class="col-md-4 form-group" th:class="${#fields.hasErrors('prepTime')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                     <label><b>Prep Time:</b></label>
-                                    <input type="text" class="form-control" th:field="*{prepTime}"/>
+                                    <input type="text" class="form-control" th:field="*{prepTime}" th:errorclass="is-invalid"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('prepTime')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('prepTime')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
-                                <div class="form-group col-md-4">
+                                <div class="col-md-4 form-group" th:class="${#fields.hasErrors('cookTime')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                     <label><b>Cooktime:</b></label>
-                                    <input type="text" class="form-control" th:field="*{cookTime}"/>
+                                    <input type="text" class="form-control" th:field="*{cookTime}" th:errorclass="is-invalid"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('cookTime')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('cookTime')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label><b>Difficulty:</b></label>
@@ -77,17 +98,29 @@
                                 </div>
                             </div>
                             <div class="row g-3">
-                                <div class="col-md-4 form-group">
+                                <div class="col-md-4 form-group" th:class="${#fields.hasErrors('servings')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                     <label><b>Servings:</b></label>
-                                    <input type="text" class="form-control" th:field="*{servings}"/>
+                                    <input type="text" class="form-control" th:field="*{servings}" th:errorclass="is-invalid"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('servings')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('servings')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
                                 <div class="col-md-4 form-group">
                                     <label><b>Source:</b></label>
                                     <input type="text" class="form-control" th:field="*{source}"/>
                                 </div>
-                                <div class="col-md-4 form-group">
+                                <div class="col-md-4 form-group" th:class="${#fields.hasErrors('url')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                     <label><b>URL:</b></label>
-                                    <input type="text" class="form-control" th:field="*{url}"/>
+                                    <input type="text" class="form-control" th:field="*{url}" th:errorclass="is-invalid"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('url')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('url')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -125,8 +158,15 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-md-12 form-group">
-                                    <textarea class="form-control" rows="3" th:field="*{directions}"></textarea></div>
+                                <div class="col-md-12 form-group" th:class="${#fields.hasErrors('directions')}
+                                ? 'col-md-12 form-group has-error' : 'col-md-12 form-group'">
+                                    <textarea class="form-control" rows="3" th:field="*{directions}" th:errorclass="is-invalid"></textarea>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('directions')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('directions')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
