--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -36,7 +36,7 @@
                             <div class="row g-3">
                                 <div class="col-md-4 form-group" th:class="${#fields.hasErrors('description')}
                                 ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
-                                    <label><b>Recipe Description:</b></label>
+                                    <label th:text="#{recipe.description}">Recipe Description:</label>
                                     <input type="text" class="form-control" th:field="*{description}" th:errorclass="is-invalid"/>
                                     <div class="invalid-feedback" th:if="${#fields.hasErrors('description')}">
                                         <ul>
